quotes added based on user to show page

--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,21 @@
 body {
+
   text-align: center;
 }
 
 form {
+display: block;
+margin-top: 50px; 
 text-align: center;
 
+}
+
+#quote {
+  bottom: 20px;
+  position: absolute;
+  font-size: 20px;
+  /*padding: 0 100px;*/
+  text-align: center;
+  text-shadow: 0 3px 3px #222;
+  width: 100%;
 }
