--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script type="text/javascript" src="/js/jquery.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
   </head>
   <body>
     <a href="/users/logout" class="logout">logout</a>
