--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,14 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script type="text/javascript" src="/js/jquery.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
   </head>
   <body>
     <div>
       <h1 class="text-center">Quotation Station</h1>
+      <h2>“In quoting others, we cite ourselves.” <br>
+― Julio Cortázar</h2>
       <form action="/users/login" method="post">
         <input placeholder="username" name="user[email]" type="text"/>
         <input placeholder="password" name="user[password]" type="password"/>
