--- a/views/users/new.html
+++ b/views/users/new.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="/main.css">
+  <script type="text/javascript" src="/js/jquery.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
 </head>
 <body>
   <div>
+    <h1>Quotation Station</h1>
+    <h2>Please create an account</h2>
     <form action="/users" method="POST">
 
       <label for="email">Email</label><br>
