--- a/views/quotes/index.html
+++ b/views/quotes/index.html
@@ -10,13 +10,16 @@
 	<h1>Select Your Favorite Quote</h1>
 	<h3>Change quotes by refreshing the page.</h3>
 
-	<div id="quote">"{{ quote }}"<br>&mdash;
-	{{ quoteAuthor }}</div>
+	<div id="quote">"{{ quote }}"</div><br>&mdash;
+	<div id = "quote-author">{{ quoteAuthor }}</div><br>
 
+
+	<input type="hidden" id="quote-url-input" value={{quoteLink}} >
+	<input type="hidden" id="quote-user_id-input" value={{user_id}}>
 	
-    <a href="/quotes/show"><small>Save Quote</small></a>
-    <a href="/quotes/new"><small>Add Quote</small></a>
-    <a href="/quotes/edit"><small>Edit Quote</small></a> 
+    <a href="" id = "add-quote">Save This Quote</a>
+    <a href="/quotes/new">Add Quote</a>
+    <a href = "/quotes/show">Show All Quotes</a>
   </div>
 </body>
 </html>
