half of css done

--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    
     <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
     <a href="/users/logout" class="logout">logout</a>
