--- a/views/quotes/edit.html
+++ b/views/quotes/edit.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 	<title>Quotation Station</title>
 </head>
 <body>
@@ -12,13 +13,13 @@
 	
     <form class="edit-quote-form" action ="/quotes/show" method = "put">
       <label>Quote:</label>
-      <textarea id="quote-change-input" value={{ quote }} >
+      <textarea id="quote-change-input" value={{quote}} >
 				{{quote}}
       	</textarea> 
       <br />
 
       <label>Quote Author:</label>
-      <textarea id="quote-changeauthor-input" value = {{ author }}>
+      <textarea id="quote-changeauthor-input" value = {{author}}>
       	{{author}}
        </textarea>
       	
@@ -26,9 +27,9 @@
 
   			{{/quote}}
 
-      <input type="hidden" id="change-id-input" value={{ id }} >
-			<input type="hidden" id="quote-changeurl-input" value={{ quoteLink }} />
-			<input type="hidden" id="quote-changeuser_id-input" value = {{ user_id }}>
+      <input type="hidden" id="change-id-input" value={{quote.id}} >
+			<input type="hidden" id="quote-changeurl-input" value={{quote.link}} />
+			<input type="hidden" id="quote-changeuser_id-input" value = {{quote.user_id}}>
       <button type="submit">Submit</button>
 	<a href="/quotes/show">Go Back</a>
     </form>
