--- a/views/quotes/new.html
+++ b/views/quotes/new.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 	<title>Quotation Station</title>
 </head>
 <body>
