--- a/views/quotes/show.html
+++ b/views/quotes/show.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 	<title>Quotation Station</title>
 
 </head>
 <body>
 	<a href="/quotes/index">Back to quotes</a>
     <hr />
-		
+		<h2>Your Favorite Quotes</h2>
 		<!-- {{{quoteText}}} - {{{quoteAuthor}}} -->
     {{#quote}}
     <div class = 'quote-container' data-id= "{{user_id}}">
