--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,7 @@
 	border: 5px solid #454140;
 	width: 75%;
 	display: block;
-	margin-top: 60px;
+	margin-top: 50px;
 
 }
 
@@ -123,12 +123,12 @@ input[type="submit"] {
 }
 
 a.signup{
-	width: 75%;
-  border: 1px solid black;
+	width: 100%;
+ /* border: 1px solid black;*/
   background-color: #f1e3dd;
 	font-size: 15px;
 	color: #454140;
-	margin-bottom: 60px;
+	margin-bottom: 100px;
 	outline: none;
   text-decoration: none;
   padding: 2px 1px 0;
