--- a/views/quotes/edit.html
+++ b/views/quotes/edit.html
@@ -5,23 +5,26 @@
 	<script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
 	<title>Quotation Station</title>
 </head>
-<body>
+<body class ="editquotepage">
+	<div class="image"></div>​
+	<div id = "container3">
 	{{#quote}}
-	<h5> Edit {{{ quote }}} - {{author}} </h5>
+	<h2 class ="editquote"> Edit: {{{ quote }}} - {{author}} </h2>
 	
     <form class="edit-quote-form" action ="/quotes/show" method = "put">
       <label>Quote:</label>
-      <textarea id="quote-change-input" value={{quote}} >
-				{{quote}}
-      	</textarea> 
+      <input id="quote-change-input" value= "{{ quote }}" >
+				<!-- {{quote}} -->
+      	</input> 
       <br />
 
       <label>Quote Author:</label>
-      <textarea id="quote-changeauthor-input" value = {{author}}>
-      	{{author}}
-       </textarea>
+      <input id="quote-changeauthor-input" value = "{{ author }} ">
+      	<!-- {{author}} -->
+       </input>
       	
       <br />
 
@@ -30,8 +33,11 @@
       <input type="hidden" id="change-id-input" value={{quote.id}} >
 			<input type="hidden" id="quote-changeurl-input" value={{quote.link}} />
 			<input type="hidden" id="quote-changeuser_id-input" value = {{quote.user_id}}>
-      <button type="submit">Submit</button>
-	<a href="/quotes/show">Go Back</a>
+      <button type="submit">Submit</button><br>
     </form>
+    <div class="text-center2">
+	<a href="/quotes/show" class = "goback">Go Back</a>
+</div>
+  </div>
 </body>
 </html>
