--- a/views/quotes/show.html
+++ b/views/quotes/show.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<script type="text/javascript" src="/js/jquery.js"></script>
+    <meta charset="UTF-8">
+    <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-	<title>Quotation Station</title>
-
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+    <title>Quotation Station</title>
 </head>
-<body>
-	<a href="/quotes/index">Back to quotes</a>
-    <hr />
-		<h2>Your Favorite Quotes</h2>
-		<!-- {{{quoteText}}} - {{{quoteAuthor}}} -->
-    {{#quote}}
-    <div class = 'quote-container' data-id= "{{user_id}}">
-    <h5> {{{quote}}} - {{{author}}} </h5>
-    <a href ="/quotes/edit/{{id}}">Edit Quote</a>
-    <br>
-    <a href = "" class = "delete" data-id= "{{id}}">Delete Quote</a>
-		</div>
-		{{/quote}}
 
+<body class="showpage">
+    <h2>Your Favorite Quotes</h2>
+    <hr />
+    <!-- {{{quoteText}}} - {{{quoteAuthor}}} -->
+    {{#quote}}
+    <div class='quote-container' data-id="{{user_id}}">
+        <h4> {{{quote}}} - {{{author}}} </h4>
+        <button class ="edit-button"><a href="/quotes/edit/{{id}}" class ="edit">Edit Quote</a>
+        <br></button>
+        <button class = "delete-button"><a href="" class="delete" data-id="{{id}}">Delete Quote</a></button>
+        <hr />
+    </div>
+    {{/quote}}
+    <button class = "back-button"><a href="/quotes/index" class="back">Back to Quotes</a></button>
     <!-- <a href="/quotes/{{ id }}/edit">Edit Quote</a> -->
     <!-- <input class="delete-quote" data-id={{ id }}><button>Delete this quote? Are you sure?</button> -->
 </body>
+
 </html>
