--- a/views/users/new.html
+++ b/views/users/new.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  
-  <script type="text/javascript" src="/js/jquery.js"></script>
+    <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
 </head>
-<body class ="userpage">
-  <div>
-   <div class="image"></div>​
-    <h2>Create Your Account</h2>
-    <form action="/users" method="POST" class = "userform">
 
-      <label for="email">Email</label><br>
-      <input id="email" type="text" name="user[email]" placeholder="john.doe@example.com"><br>
-
-      <label for="password">Password</label><br>
-      <input id="password" type="password" name="user[password]" placeholder="P4ssw0rd1234"><br>
-
-      <input type="submit" value="Sign Up">
-
-    </form>
-  </div>
+<body class="userpage">
+    <div>
+        <div class="image"></div>​
+        <h2>Create Your Account</h2>
+        <form action="/users" method="POST" class="userform">
+            <label for="email">Username</label>
+            <br>
+            <input id="email" type="text" name="user[email]" placeholder="Your username">
+            <br>
+            <label for="password">Password</label>
+            <br>
+            <input id="password" type="password" name="user[password]" placeholder="Your password">
+            <br>
+            <input type="submit" value="Sign Up">
+        </form>
+    </div>
 </body>
+
 </html>
