--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,8 @@
         <h2 class="quote">“In quoting others, we cite ourselves.” <br>
 ― Julio Cortázar</h2>
         <form action="/users/login" method="post">
-            <input placeholder="username" name="user[email]" type="text" />
-            <input placeholder="password" name="user[password]" type="password" />
+            <input placeholder="Username" name="user[email]" type="text" />
+            <input placeholder="password" name="user[password]" type="Password" />
             <input type="submit" value="Login">
             <!--  <input type ="submit" value= "Sign Up"> -->
         </form>
