--- a/views/quotes/index.html
+++ b/views/quotes/index.html
@@ -14,10 +14,10 @@
     <div class="image"></div>​
     <div id="container">
         <h2 class = "fav-quote">Select Your Favorite Quote</h2>
-        <h3>Change quotes by refreshing the page.</h3>
+        <h3>Refresh the Page to See a New Quote</h3>
         <div id="quote">"{{ quote }}"</div>
-        <br>&mdash;
-        <div id="quote-author">{{ quoteAuthor }}</div>
+        <br>
+        <div id="quote-author"> - {{ quoteAuthor }}</div>
         <br>
         <input type="hidden" id="quote-url-input" value={{quoteLink}}>
         <input type="hidden" id="quote-user_id-input" value={{user_id}}>
