--- a/views/quotes/show.html
+++ b/views/quotes/show.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="showpage">
-    <h2>Your Favorite Quotes</h2>
+    <h2>Quote Profile</h2>
     <hr />
     <!-- {{{quoteText}}} - {{{quoteAuthor}}} -->
     {{#quote}}
