--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
 ― Julio Cortázar</h2>
         <form action="/users/login" method="post">
             <input placeholder="Username" name="user[email]" type="text" />
-            <input placeholder="password" name="user[password]" type="Password" />
+            <input placeholder="Password" name="user[password]" type="password" />
             <input type="submit" value="Login">
             <!--  <input type ="submit" value= "Sign Up"> -->
         </form>
